Fixed the footer text alignment and icons.

--- a/src/app/css/index.css
+++ b/src/app/css/index.css
@@ -49,6 +49,14 @@ div#social-media-icons {
   justify-content: center;
 }
 
+/* Fixes the issue with the footer */
+.col-sm-6.text-right.custom-text-centre {
+  position: absolute;
+  top: 30px;
+  right: 100px;
+  width: 19vw;
+}
+
 /* Mobile */
 @media only screen and (max-width: 600px) {
   .custom-text-centre {
@@ -77,5 +85,11 @@ div#social-media-icons {
 
   footer#footer .col-sm-1 {
     float: left;
+  }
+
+  /* Fixes the issue with the footer */
+  .col-sm-6.text-right.custom-text-centre {
+    position: static;
+    width: 80vw;
   }
 }
